fix: ensure hamburger menu is only visible in mobile

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -46,7 +46,7 @@ header.hidden {
   display: inline-block;
   font-size: 18px;
   margin-left: 26px;
-  font-family: gugi;
+  font-family: gugi, serif;
 }
 
 .desktop_menu ul li:hover {
@@ -73,37 +73,18 @@ header.hidden {
   color: $blue-theme;
 }
 
-.no-scroll {
-  overflow: hidden;
-  height: 100%;
-}
-
-.no-interaction {
-  pointer-events: none;
-}
-
 .mobile-menu-container {
   position: relative;
-  z-index: 1001; /* Ensure it is on top */
+  z-index: 1001;
 }
 
-.desktop_menu {
-  position: fixed;
-  top: 0;
-  right: -100%;
-  width: 300px;
-  height: 100%;
-  background-color: $page-background;
-  padding: 1em;
-  z-index: 1000;
-  transition: right 0.4s ease-in-out;
+@media screen and (min-width: 481px) {
+  .menu-icon {
+    display: none;
+  }
 }
 
-.desktop_menu.mobile_menu {
-  right: 0;
-}
-
-@media screen and (min-width: 128px) and (max-width: 900px) {
+@media screen and (max-width: 480px)  {
   .desktop_menu {
     display: none;
   }
@@ -130,5 +111,21 @@ header.hidden {
     color: $text;
     font-size: 1.5em;
     padding: 0.5em 0;
+  }
+
+  .desktop_menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 300px;
+    height: 100%;
+    background-color: $page-background;
+    padding: 1em;
+    z-index: 1000;
+    transition: right 0.4s ease-in-out;
+  }
+
+  .desktop_menu.mobile_menu {
+    right: 0;
   }
 }
